# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  diff_seeker.py  file_opener.py  gendiff_gen.py  generate_diff.py  stylish_format.py
gendiff/scripts/: cli.py  engine_gendiff.py  gendiff.py  gendiff_cli.py  gendiff_gen.py
tests/: test_gendiff.py
tests/fixtures/: file1.yml  result1.txt  result2.txt  test1_result
