[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["batraz <batrazbotsiev@gmail.com>"]
readme = "README.md"
packages = [
    {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.engine_gendiff:main'


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
